--- a/make/Makefile.test
+++ b/make/Makefile.test
@@ -29,7 +29,8 @@ SOURCES := \
 	common/hard_minmax.js \
 	common/grouped_options.js \
 	model/value.js \
-	model/enablement.js
+	model/enablement.js \
+	model/pinning.js
 
 HEADERS := \
   lib/utility/debug.m4.js
